2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  An assert should give some more info so we can debug.

2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion/component/consumers/Makefile.am:
	* flumotion/component/consumers/pipeline (added):
	* flumotion/component/consumers/pipeline/pipeline.xml (added):
	* flumotion/component/consumers/pipeline/__init__.py (added):
	* flumotion/component/consumers/pipeline/Makefile.am (added):
	* flumotion/component/consumers/pipeline/pipeline.py (added):
	  Add a pipeline-consumer component, since we already had
	  -producer and -converter.

2010-09-15  Xavier Queralt  <xqueralt@gmail.com>

	* configure.ac:
	Start the new development series.

2010-09-15  Xavier Queralt  <xqueralt@gmail.com>

	* configure.ac:
	Back to dev.

=== release 0.8.0 ===

2010-09-14  Xavier Queralt  <xqueralt@gmail.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	* pkg/ubuntu-karmic/changelog:
	* pkg/ubuntu-lucid/changelog:
	Releasing 0.8.0 "7 Portes"

2010-09-14  Xavier Queralt  <xqueralt@gmail.com>

	* flumotion/admin/gtk/Makefile.am:
	* flumotion/admin/gtk/about.py:
	* flumotion/admin/gtk/dialogs.py:
	Use gtk's about dialog if possible, it simplifies a bit things.

2010-09-14  Xavier Queralt  <xqueralt@gmail.com>

	* flumotion/test/test_wizard_save.py:
	Once again, if the defaults change these tests need to be updated

2010-09-14  Xavier Queralt  <xqueralt@gmail.com>

	reviewed by: Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Default to ffmpeg deinterlacing mode.
	Set the width in the properties when using the padding correction
	* flumotion.spec.in:
	* pkg/ubuntu-karmic/control:
	* pkg/ubuntu-lucid/control:
	Depend on gstreamer-ffmpeg for the deinterlacing capabilities

2010-09-13  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/bouncers/multibouncerplug.py