@@ -940,6 +940,35 @@ class MuxerComponent(MultiInputParseLaunchComponent):
     def get_link_pad(self, muxer, srcpad, caps):
         return muxer.get_compatible_pad(srcpad, caps)
 
+    def buffer_probe_cb(self, pad, buffer, depay, eaterAlias):
+        pad = depay.get_pad("src")
+        caps = pad.get_negotiated_caps()
+        if not caps:
+            return False
+        srcpad_to_link = self.get_eater_srcpad(eaterAlias)
+        muxer = self.pipeline.get_by_name("muxer")
+        self.debug("Trying to get compatible pad for pad %r with caps %s",
+            srcpad_to_link, caps)
+        linkpad = self.get_link_pad(muxer, srcpad_to_link, caps)
+        if not linkpad:
+            m = messages.Error(T_(N_(
+                "The incoming data is not compatible with this muxer.")),
+                debug="Caps %s not compatible with this muxer." % (
+                    caps.to_string()))
+            self.addMessage(m)
+            # this is the streaming thread, cannot set state here
+            # so we do it in the mainloop
+            reactor.callLater(0, self.pipeline.set_state, gst.STATE_NULL)
+            return True
+        self.debug("Got link pad %r", linkpad)
+        srcpad_to_link.link(linkpad)
+        depay.get_pad("src").remove_buffer_probe(self._probes[eaterAlias])
+        if srcpad_to_link.is_blocked():
+            self.is_blocked_cb(srcpad_to_link, True)
+        else:
+            srcpad_to_link.set_blocked_async(True, self.is_blocked_cb)
+        return True
+
     def configure_pipeline(self, pipeline, properties):
         """
         Method not overridable by muxer subclasses.
@@ -951,40 +980,11 @@ class MuxerComponent(MultiInputParseLaunchComponent):
         self.fired_eaters = 0
         self._probes = {} # depay element -> id
 
-        def buffer_probe_cb(a, b, depay, eaterAlias):
-            pad = depay.get_pad("src")
-            caps = pad.get_negotiated_caps()
-            if not caps:
-                return False
-            srcpad_to_link = self.get_eater_srcpad(eaterAlias)
-            muxer = self.pipeline.get_by_name("muxer")
-            self.debug("Trying to get compatible pad for pad %r with caps %s",
-                srcpad_to_link, caps)
-            linkpad = self.get_link_pad(muxer, srcpad_to_link, caps)
-            self.debug("Got link pad %r", linkpad)
-            if not linkpad:
-                m = messages.Error(T_(N_(
-                    "The incoming data is not compatible with this muxer.")),
-                    debug="Caps %s not compatible with this muxer." % (
-                        caps.to_string()))
-                self.addMessage(m)
-                # this is the streaming thread, cannot set state here
-                # so we do it in the mainloop
-                reactor.callLater(0, self.pipeline.set_state, gst.STATE_NULL)
-                return True
-            srcpad_to_link.link(linkpad)
-            depay.get_pad("src").remove_buffer_probe(self._probes[depay])
-            if srcpad_to_link.is_blocked():
-                self.is_blocked_cb(srcpad_to_link, True)
-            else:
-                srcpad_to_link.set_blocked_async(True, self.is_blocked_cb)
-            return True
-
         for e in self.eaters:
             depay = self.get_element(self.eaters[e].depayName)
-            self._probes[depay] = \
+            self._probes[e] = \
                 depay.get_pad("src").add_buffer_probe(
-                    buffer_probe_cb, depay, e)
+                    self.buffer_probe_cb, depay, e)
 
     def is_blocked_cb(self, pad, is_blocked):
         if is_blocked:
